[project]
name = "abl_theme"
authors = [{ name = "American Best Life", email = "haoyu@americanbestlife.com" }]
description = "ABL ERPNext desk presentation theme (display-layer CSS/JS only, no business logic)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"
